# grew_ndt2ud

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LESMEG.md  Lesenotater.ipynb  NDT_to_UD.grs  README.md  TMP.conllu  UD_deprel_list.txt  UD_feats_list.txt  UD_pos_list.txt  conversion_stats_LAS.txt  conversion_stats_LAS_dev.txt  conversion_stats_UAS.txt  conversion_stats_UAS_dev.txt  convert_morph.py  convert_ndt2ud.sh  convert_ndt_to_ud.sh  convert_treebank_to_UD.py  fetch_sents_by_ID.sh  graph_sample.json  grew_book_code.ipynb  grew_convert_ndt_to_ud.sh  hello.py  input.gr  parse_conllu.py  partition_data.py  preprocess_NDT.ipynb  process_NDT.ipynb  pylock.toml  pyproject.toml  requirements.txt  run_all.sh  run_grew.sh  single.grs  test_grew_rule_application.ipynb  testevaluering_GULL_LAS.txt  testevaluering_GULL_UAS.txt  testrule.grs  teststrategy.grs  (+8 more)
data/: 2019_gullkorpus_ndt.conllu  2019_gullkorpus_ndt_dev_uten_hash.conllu  2019_gullkorpus_ndt_uten-hash.conllu  2019_gullkorpus_ndt_uten_hash.conllu  2019_gullkorpus_ud.conllu  2019_gullkorpus_ud_dev_uten_hash.conllu  2019_gullkorpus_ud_før_annotasjon.conllu  2019_gullkorpus_ud_før_annotasjon_dev_uten_hash.conllu  2019_gullkorpus_ud_før_annotasjon_train_uten_hash.conllu  2019_gullkorpus_ud_train_uten_hash.conllu  GULL_dev.csv  GULL_dev_ids.txt  GULL_train.csv  GULL_train_ids.txt  adhoc_conversion_output_16-08-22.conllu  adhoc_result_REV_VERB_HEAD.conllu  adhoc_result_REV_root.conll  adhoc_result_XXX.conll  adhoc_result_vaeremed.conll  adhoc_result_åPUTFYLL.conll  another_sentence_rev.conll  dev_fixed_UDfeats.conll  dev_ids.txt  even_one_more_sentence.conll  grew_output_TEST.conllu  grew_output_dev.conllu  grew_output_test.conllu  gullkorpus_all_ids.txt  gullkorpus_dev_ids.txt  lia_dev.conllu  lia_test.conllu  lia_train.conllu  nb-ud-dev_uten_hash.conllu  ndt_nb_dev.conllu  ndt_nb_dev_retokenized_no_quotechar_udfeatspos.conllu  ndt_nb_dev_udmorph.conllu  ndt_nb_dev_udposfeats.conllu  ndt_nb_test.conllu  ndt_nb_test_retokenized_no_quotechar_udfeatspos.conllu  ndt_nb_test_udmorph.conllu  (+19 more)
notebooks/: divide_LIA_datasets.ipynb  grew_book_code.ipynb  grewpy_tutorial_drawing_dep.ipynb  grewpy_tutorial_modify_data.ipynb  no_match_dev.txt  no_match_test.txt  no_match_train.txt  process_NDT.ipynb  rule_workflow.ipynb  test_grew.ipynb  test_grewpy.py  (+6 more)
(+127 files in other folders)
