[project]
name = "ndt2ud"
version = "0.1.0"
requires-python = ">=3.12"
description = "Code to convert the Norwegian Dependency Treebank (NDT) to Universal Dependencies (UD)"
authors = [
    {name = "Språkbanken", email = "sprakbanken@nb.no"},
]
dependencies = [
    "regex>=2024.11.6",
    "udapi>=0.4.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "grewpy>=0.6.0",
    "ruff>=0.12.1"
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[project.scripts]
ndt2ud = "ndt2ud:convert_and_validate"

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
